--- a/counter.css
+++ b/counter.css
@@ -15,7 +15,7 @@
 #count_block {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: white;
-  font-size: 1.5rem;
+  font-size: 3rem;
   font-weight: bolder;
   height: 4rem;
   text-align: center;
@@ -34,4 +34,17 @@
   padding: 0.3rem;
   background-color: mintcream;
   border: none;
+}
+
+.navBar {
+  display: flex;
+  position: relative;
+  padding: 0 2rem;
+}
+.link {
+  display: flex;
+  position: absolute;
+  right: 2rem;
+  bottom: 0;
+  gap: 3rem;
 }
